# 2811_cw1

./: .gitignore  CMakeLists.txt  README.md  ResponsiveLabel.cpp  ResponsiveLabel.h  ResponsiveLayout.cpp  ResponsiveLayout.h  ResponsiveWindow.cpp  ResponsiveWindow.h  card.cpp  card.h  folder_compressor.cpp  folder_compressor.h  generate.sh  main.cpp  responsive.pro  responsive_label.cpp  responsive_label.h  responsive_layout.cpp  responsive_layout.h  responsive_window.cpp  responsive_window.h  screenshot.cpp  screenshot.h
description/: index.html
report/: index.html
